--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,23 @@
 body{
-    background:pink;
+    background:#023373;
     font-family:Arial, Helvetica, sans-serif;
 }
 .assignment{
     display:flex;
     padding:10px;
     margin:10px;
-    background:lightgray;
+    background:#068BBF;
 }
 .assignment img{
     width:200px;
-    padding:10px;
+    border: 2px solid #3BBCD9;
+    margin-right:20px;
 }
 h1{
-    color:darkorchid;
+    color:#187FD9;
     text-align:center;
+}
+a {
+    text-decoration:none;
+    color:white;
 }
