--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,16 @@ body{
     display:flex;
     padding:10px;
     margin:10px;
+    margin-bottom: 30px;
     background:#068BBF;
+    border-radius:5px;
+    box-shadow: 5px 7px #888888;
 }
 .assignment img{
     width:200px;
     border: 2px solid #3BBCD9;
     margin-right:20px;
+    border-radius:5px;
 }
 h1{
     color:#187FD9;
@@ -20,4 +24,7 @@ h1{
 a {
     text-decoration:none;
     color:white;
+}
+.assignment a:hover{
+    color:lightskyblue;
 }
